(library
 (name ocamlorg_frontend)
 (libraries ocamlorg.global dream ocamlorg.data timedesc ocamlorg_static))

(include_subdirs unqualified)

(subdir
 layouts/
 (rule
  (target layout.ml)
  (action
   (run %{bin:dream_eml} %{dep:layout.eml} --workspace %{workspace_root})))
 (rule
  (target community_layout.ml)
  (action
   (run
    %{bin:dream_eml}
    %{dep:community_layout.eml}
    --workspace
    %{workspace_root})))
 (rule
  (target learn_layout.ml)
  (action
   (run
    %{bin:dream_eml}
    %{dep:learn_layout.eml}
    --workspace
    %{workspace_root})))
 (rule
  (target news_layout.ml)
  (action
   (run
    %{bin:dream_eml}
    %{dep:news_layout.eml}
    --workspace
    %{workspace_root})))
 (rule
  (target tools_layout.ml)
  (action
   (run
    %{bin:dream_eml}
    %{dep:tools_layout.eml}
    --workspace
    %{workspace_root})))
 (rule
  (target package_layout.ml)
  (action
   (run
    %{bin:dream_eml}
    %{dep:package_layout.eml}
    --workspace
    %{workspace_root}))))

(subdir
 pages/
 (rule
  (target about.ml)
  (action
   (run %{bin:dream_eml} %{dep:about.eml} --workspace %{workspace_root})))
 (rule
  (target academic_users.ml)
  (action
   (run
    %{bin:dream_eml}
    %{dep:academic_users.eml}
    --workspace
    %{workspace_root})))
 (rule
  (target is_ocaml_yet.ml)
  (action
   (run
    %{bin:dream_eml}
    %{dep:is_ocaml_yet.eml}
    --workspace
    %{workspace_root})))
 (rule
  (target ocaml_planet.ml)
  (action
   (run
    %{bin:dream_eml}
    %{dep:ocaml_planet.eml}
    --workspace
    %{workspace_root})))
 (rule
  (target blog_post.ml)
  (action
   (run %{bin:dream_eml} %{dep:blog_post.eml} --workspace %{workspace_root})))
 (rule
  (target changelog.ml)
  (action
   (run %{bin:dream_eml} %{dep:changelog.eml} --workspace %{workspace_root})))
 (rule
  (target changelog_entry.ml)
  (action
   (run
    %{bin:dream_eml}
    %{dep:changelog_entry.eml}
    --workspace
    %{workspace_root})))
 (rule
  (target news.ml)
  (action
   (run %{bin:dream_eml} %{dep:news.eml} --workspace %{workspace_root})))
 (rule
  (target news_post.ml)
  (action
   (run %{bin:dream_eml} %{dep:news_post.eml} --workspace %{workspace_root})))
 (rule
  (target books.ml)
  (action
   (run %{bin:dream_eml} %{dep:books.eml} --workspace %{workspace_root})))
 (rule
  (target community.ml)
  (action
   (run %{bin:dream_eml} %{dep:community.eml} --workspace %{workspace_root})))
 (rule
  (target events.ml)
  (action
   (run %{bin:dream_eml} %{dep:events.eml} --workspace %{workspace_root})))
 (rule
  (target workshop.ml)
  (action
   (run %{bin:dream_eml} %{dep:workshop.eml} --workspace %{workspace_root})))
 (rule
  (target home.ml)
  (action
   (run %{bin:dream_eml} %{dep:home.eml} --workspace %{workspace_root})))
 (rule
  (target industrial_users.ml)
  (action
   (run
    %{bin:dream_eml}
    %{dep:industrial_users.eml}
    --workspace
    %{workspace_root})))
 (rule
  (target learn.ml)
  (action
   (run %{bin:dream_eml} %{dep:learn.eml} --workspace %{workspace_root})))
 (rule
  (target local_blog.ml)
  (action
   (run %{bin:dream_eml} %{dep:local_blog.eml} --workspace %{workspace_root})))
 (rule
  (target install.ml)
  (action
   (run %{bin:dream_eml} %{dep:install.eml} --workspace %{workspace_root})))
 (rule
  (target tools_platform.ml)
  (action
   (run
    %{bin:dream_eml}
    %{dep:tools_platform.eml}
    --workspace
    %{workspace_root})))
 (rule
  (target tool_page.ml)
  (action
   (run %{bin:dream_eml} %{dep:tool_page.eml} --workspace %{workspace_root})))
 (rule
  (target jobs.ml)
  (action
   (run %{bin:dream_eml} %{dep:jobs.eml} --workspace %{workspace_root})))
 (rule
  (target outreachy.ml)
  (action
   (run %{bin:dream_eml} %{dep:outreachy.eml} --workspace %{workspace_root})))
 (rule
  (target package_overview.ml)
  (action
   (run
    %{bin:dream_eml}
    %{dep:package_overview.eml}
    --workspace
    %{workspace_root})))
 (rule
  (target package_documentation.ml)
  (action
   (run
    %{bin:dream_eml}
    %{dep:package_documentation.eml}
    --workspace
    %{workspace_root})))
 (rule
  (target package_versions.ml)
  (action
   (run
    %{bin:dream_eml}
    %{dep:package_versions.eml}
    --workspace
    %{workspace_root})))
 (rule
  (target packages.ml)
  (action
   (run %{bin:dream_eml} %{dep:packages.eml} --workspace %{workspace_root})))
 (rule
  (target packages_autocomplete_fragment.ml)
  (action
   (run
    %{bin:dream_eml}
    %{dep:packages_autocomplete_fragment.eml}
    --workspace
    %{workspace_root})))
 (rule
  (target packages_search.ml)
  (action
   (run
    %{bin:dream_eml}
    %{dep:packages_search.eml}
    --workspace
    %{workspace_root})))
 (rule
  (target papers.ml)
  (action
   (run %{bin:dream_eml} %{dep:papers.eml} --workspace %{workspace_root})))
 (rule
  (target exercises.ml)
  (action
   (run %{bin:dream_eml} %{dep:exercises.eml} --workspace %{workspace_root})))
 (rule
  (target release.ml)
  (action
   (run %{bin:dream_eml} %{dep:release.eml} --workspace %{workspace_root})))
 (rule
  (targets governance.ml)
  (deps governance.eml)
  (action
   (run %{bin:dream_eml} %{deps} --workspace %{workspace_root})))
 (rule
  (targets governance_team.ml)
  (deps governance_team.eml)
  (action
   (run %{bin:dream_eml} %{deps} --workspace %{workspace_root})))
 (rule
  (targets releases.ml)
  (deps releases.eml)
  (action
   (run %{bin:dream_eml} %{dep:releases.eml} --workspace %{workspace_root})))
 (rule
  (target resources.ml)
  (action
   (run %{bin:dream_eml} %{dep:resources.eml} --workspace %{workspace_root})))
 (rule
  (target success_story.ml)
  (action
   (run
    %{bin:dream_eml}
    %{dep:success_story.eml}
    --workspace
    %{workspace_root})))
 (rule
  (target tutorial.ml)
  (action
   (run %{bin:dream_eml} %{dep:tutorial.eml} --workspace %{workspace_root})))
 (rule
  (target not_found.ml)
  (action
   (run %{bin:dream_eml} %{dep:not_found.eml} --workspace %{workspace_root})))
 (rule
  (target package_documentation_not_found.ml)
  (action
   (run
    %{bin:dream_eml}
    %{dep:package_documentation_not_found.eml}
    --workspace
    %{workspace_root})))
 (rule
  (target playground.ml)
  (action
   (run %{bin:dream_eml} %{dep:playground.eml} --workspace %{workspace_root})))
 (rule
  (target page.ml)
  (action
   (run %{bin:dream_eml} %{dep:page.eml} --workspace %{workspace_root})))
 (rule
  (target logos.ml)
  (deps logos.eml)
  (action
   (run %{bin:dream_eml} %{dep:logos.eml} --workspace %{workspace_root})))
 (rule
  (target cookbook.ml)
  (deps cookbook.eml)
  (action
   (run %{bin:dream_eml} %{dep:cookbook.eml} --workspace %{workspace_root})))
 (rule
  (target cookbook_task.ml)
  (deps cookbook_task.eml)
  (action
   (run
    %{bin:dream_eml}
    %{dep:cookbook_task.eml}
    --workspace
    %{workspace_root})))
 (rule
  (target cookbook_recipe.ml)
  (deps cookbook_recipe.eml)
  (action
   (run
    %{bin:dream_eml}
    %{dep:cookbook_recipe.eml}
    --workspace
    %{workspace_root})))
 (rule
  (target youtube.ml)
  (action
   (run %{bin:dream_eml} %{dep:youtube.eml} --workspace %{workspace_root}))))

(subdir
 components/
 (rule
  (target copy_to_clipboard.ml)
  (action
   (run
    %{bin:dream_eml}
    %{dep:copy_to_clipboard.eml}
    --workspace
    %{workspace_root})))
 (rule
  (target footer.ml)
  (action
   (run %{bin:dream_eml} %{dep:footer.eml} --workspace %{workspace_root})))
 (rule
  (target forms.ml)
  (action
   (run %{bin:dream_eml} %{dep:forms.eml} --workspace %{workspace_root})))
 (rule
  (target header.ml)
  (action
   (run %{bin:dream_eml} %{dep:header.eml} --workspace %{workspace_root})))
 (rule
  (target hero_section.ml)
  (action
   (run
    %{bin:dream_eml}
    %{dep:hero_section.eml}
    --workspace
    %{workspace_root})))
 (rule
  (target navmap.ml)
  (action
   (run %{bin:dream_eml} %{dep:navmap.eml} --workspace %{workspace_root})))
 (rule
  (target pagination.ml)
  (action
   (run %{bin:dream_eml} %{dep:pagination.eml} --workspace %{workspace_root})))
 (rule
  (target search.ml)
  (action
   (run %{bin:dream_eml} %{dep:search.eml} --workspace %{workspace_root})))
 (rule
  (target sidebar.ml)
  (action
   (run %{bin:dream_eml} %{dep:sidebar.eml} --workspace %{workspace_root})))
 (rule
  (target toc.ml)
  (action
   (run %{bin:dream_eml} %{dep:toc.eml} --workspace %{workspace_root})))
 (rule
  (target icons.ml)
  (action
   (run %{bin:dream_eml} %{dep:icons.eml} --workspace %{workspace_root})))
 (rule
  (target package_breadcrumbs.ml)
  (action
   (run
    %{bin:dream_eml}
    %{dep:package_breadcrumbs.eml}
    --workspace
    %{workspace_root})))
 (rule
  (target learn_components.ml)
  (action
   (run
    %{bin:dream_eml}
    %{dep:learn_components.eml}
    --workspace
    %{workspace_root})))
 (rule
  (target tutorial_search.ml)
  (action
   (run
    %{bin:dream_eml}
    %{dep:tutorial_search.eml}
    --workspace
    %{workspace_root})))
 (rule
  (target cards.ml)
  (action
   (run %{bin:dream_eml} %{dep:cards.eml} --workspace %{workspace_root}))))
