(library
 (name ocamlorg_frontend)
 (libraries ocamlorg.global dream ocamlorg.data timedesc ocamlorg_static))

(include_subdirs unqualified)

(subdir
 layouts/
 (rule
  (target dune.inc)
  (deps
   (glob_files *.eml))
  (mode promote)
  (action
   (with-stdout-to
    %{target}
    (run ../../../tool/rule-gen/rulegen.exe))))
 (include dune.inc))

(subdir
 pages/
 (rule
  (target dune.inc)
  (deps
   (glob_files *.eml))
  (mode promote)
  (action
   (with-stdout-to
    %{target}
    (run ../../../tool/rule-gen/rulegen.exe))))
 (include dune.inc))

(subdir
 components/
 (rule
  (target dune.inc)
  (deps
   (glob_files *.eml))
  (mode promote)
  (action
   (with-stdout-to
    %{target}
    (run ../../../tool/rule-gen/rulegen.exe))))
 (include dune.inc))
