(library
 (name ocamlorg_static)
 (public_name ocamlorg.static)
 (libraries fmt dream))

(rule
 (target asset_digests.ml)
 (deps
  %{workspace_root}/tool/static-file-digest/main.exe
  %{workspace_root}/asset/css/main.css
  (source_tree %{workspace_root}/asset))
 (action
  (with-stdout-to
   %{null}
   (run %{deps} %{workspace_root}/asset/ -s -o %{target}))))

(rule
 (target media_digests.ml)
 (deps
  %{workspace_root}/tool/static-file-digest/main.exe
  (source_tree %{workspace_root}/data/media))
 (action
  (with-stdout-to
   %{null}
   (run %{deps} %{workspace_root}/data/media/ -s -o %{target}))))

(rule
 (target playground_digests.ml)
 (deps
  %{workspace_root}/tool/static-file-digest/main.exe
  (source_tree %{workspace_root}/playground/asset))
 (action
  (with-stdout-to
   %{null}
   (run %{deps} %{workspace_root}/playground/asset/ -s -o %{target}))))
