(library
 (name ocamlorg_static)
 (libraries fmt dream))

(rule
 (target asset.ml)
 (deps
  %{project_root}/asset/css/main.css
  %{project_root}/asset/changelog.xml
  %{project_root}/asset/events.xml
  %{project_root}/asset/jobs.xml
  %{project_root}/asset/news.xml
  %{project_root}/asset/planet.xml
  (source_tree %{project_root}/asset))
 (action
  (with-stdout-to
   %{null}
   (run %{bin:ocaml-crunch} -m plain %{project_root}/asset -o %{target}))))

(rule
 (target media.ml)
 (deps
  (source_tree %{project_root}/data/media))
 (action
  (with-stdout-to
   %{null}
   (run %{bin:ocaml-crunch} -m plain %{project_root}/data/media -o %{target}))))

(rule
 (target playground_digests.ml)
 (deps
  %{project_root}/tool/static-file-digest/main.exe
  (source_tree %{project_root}/playground/asset))
 (action
  (with-stdout-to
   %{null}
   (run %{deps} %{project_root}/playground/asset/ -s -o %{target}))))
