(executable
 (name main)
 (public_name ood-cli)
 (package ood-cli)
 (libraries cmdliner bos alcotest fmt fmt.tty yaml jekyll-format logs.fmt)
 (preprocess
  (staged_pps ppx_enumerate ppx_deriving_yaml)))

(rule
 (alias runtest)
 (package ood-cli)
 (deps
  main.exe
  (source_tree %{workspace_root}/data))
 (action
  (chdir
   %{workspace_root}
   (run %{bin:ood-cli} lint))))
