(library
 (name ood)
 (public_name ood))

(rule
 (deps %{bin:ood-gen})
 (targets academic_institution.ml)
 (mode
  (promote (until-clean)))
 (action
  (with-stdout-to
   %{targets}
   (run %{deps} academic_institution))))

(rule
 (deps %{bin:ood-gen})
 (targets book.ml)
 (mode
  (promote (until-clean)))
 (action
  (with-stdout-to
   %{targets}
   (run %{deps} book))))

(rule
 (deps %{bin:ood-gen})
 (targets event.ml)
 (mode
  (promote (until-clean)))
 (action
  (with-stdout-to
   %{targets}
   (run %{deps} event))))

(rule
 (deps %{bin:ood-gen})
 (targets industrial_user.ml)
 (mode
  (promote (until-clean)))
 (action
  (with-stdout-to
   %{targets}
   (run %{deps} industrial_user))))

(rule
 (deps %{bin:ood-gen})
 (targets paper.ml)
 (mode
  (promote (until-clean)))
 (action
  (with-stdout-to
   %{targets}
   (run %{deps} paper))))

(rule
 (deps %{bin:ood-gen})
 (targets success_story.ml)
 (mode
  (promote (until-clean)))
 (action
  (with-stdout-to
   %{targets}
   (run %{deps} success_story))))

(rule
 (deps %{bin:ood-gen})
 (targets tool.ml)
 (mode
  (promote (until-clean)))
 (action
  (with-stdout-to
   %{targets}
   (run %{deps} tool))))

(rule
 (deps %{bin:ood-gen})
 (targets tutorial.ml)
 (mode
  (promote (until-clean)))
 (action
  (with-stdout-to
   %{targets}
   (run %{deps} tutorial))))

(rule
 (deps %{bin:ood-gen})
 (targets video.ml)
 (mode
  (promote (until-clean)))
 (action
  (with-stdout-to
   %{targets}
   (run %{deps} video))))

(rule
 (deps %{bin:ood-gen})
 (targets watch.ml)
 (mode
  (promote (until-clean)))
 (action
  (with-stdout-to
   %{targets}
   (run %{deps} watch))))

(rule
 (deps %{bin:ood-gen})
 (targets news.ml)
 (mode
  (promote (until-clean)))
 (action
  (with-stdout-to
   %{targets}
   (run %{deps} news))))

(rule
 (deps %{bin:ood-gen})
 (targets opam_user.ml)
 (mode
  (promote (until-clean)))
 (action
  (with-stdout-to
   %{targets}
   (run %{deps} opam_user))))

(rule
 (deps %{bin:ood-gen})
 (targets workshop.ml)
 (mode
  (promote (until-clean)))
 (action
  (with-stdout-to
   %{targets}
   (run %{deps} workshops))))
