(rule
 (target tailwindcss-linux-x64)
 (action
  (progn
   (with-stdout-to
    %{target}
    (bash
     "cat 2> /dev/null < $(which tailwindcss) || curl -#fSL https://github.com/tailwindlabs/tailwindcss/releases/download/v3.3.6/%{target}"))
   (run chmod +x %{target}))))

(rule
 (target tailwindcss-linux-arm64)
 (action
  (progn
   (with-stdout-to
    %{target}
    (bash
     "cat 2> /dev/null < $(which tailwindcss) || curl -#fSL https://github.com/tailwindlabs/tailwindcss/releases/download/v3.3.6/%{target}"))
   (run chmod +x %{target}))))

(rule
 (target tailwindcss-macos-x64)
 (action
  (progn
   (with-stdout-to
    %{target}
    (bash
     "cat 2> /dev/null < $(which tailwindcss) || curl -#fSL https://github.com/tailwindlabs/tailwindcss/releases/download/v3.3.6/%{target}"))
   (run chmod +x %{target}))))

(rule
 (target tailwindcss-macos-arm64)
 (action
  (progn
   (with-stdout-to
    %{target}
    (bash
     "cat 2> /dev/null < $(which tailwindcss) || curl -#fSL https://github.com/tailwindlabs/tailwindcss/releases/download/v3.3.6/%{target}"))
   (run chmod +x %{target}))))

(rule
 (enabled_if
  (and
   (= %{architecture} amd64)
   (= %{system} linux)))
 (target tailwindcss)
 (deps tailwindcss-linux-x64)
 (action
  (copy %{deps} tailwindcss)))

(rule
 (enabled_if
  (and
   (= %{architecture} arm64)
   (= %{system} linux)))
 (target tailwindcss)
 (deps tailwindcss-linux-arm64)
 (action
  (copy %{deps} tailwindcss)))

(rule
 (enabled_if
  (and
   (= %{architecture} amd64)
   (= %{system} macosx)))
 (target tailwindcss)
 (deps tailwindcss-macos-x64)
 (action
  (copy %{deps} tailwindcss)))

(rule
 (enabled_if
  (and
   (= %{architecture} arm64)
   (= %{system} macosx)))
 (target tailwindcss)
 (deps tailwindcss-macos-arm64)
 (action
  (copy %{deps} tailwindcss)))

(alias
 (name default)
 (deps tailwindcss))

(install
 (section bin)
 (package tailwindcss)
 (files tailwindcss))
