(lang dune 3.6)

(name yoshi)

(generate_opam_files true)

(source
 (github tmattio/yoshi))

(authors "Thibaut Mattio")

(maintainers "Thibaut Mattio <thibaut.mattio@gmail.com>")

(license ISC)

(documentation https://ocaml.org/p/yoshi)

(package
 (name yoshi)
 (synopsis "Convert Markdown and YAML Data to OCaml Modules")
 (description
  "Yoshi converts data from Markdown or YAML format into OCaml modules.")
 (depends
  yaml
  ppx_deriving_yaml
  (alcotest :with-test))
 (tags
  (yaml markdown crunch)))
