(rule
 (targets layout_template.ml)
 (deps layout_template.eml)
 (action
  (run %{bin:dream_eml} %{deps} --workspace %{workspace_root})))

(rule
 (targets overview_template.ml)
 (deps overview_template.eml)
 (action
  (run %{bin:dream_eml} %{deps} --workspace %{workspace_root})))

(rule
 (targets logs_template.ml)
 (deps logs_template.eml)
 (action
  (run %{bin:dream_eml} %{deps} --workspace %{workspace_root})))

(rule
 (targets analytics_template.ml)
 (deps analytics_template.eml)
 (action
  (run %{bin:dream_eml} %{deps} --workspace %{workspace_root})))

(rule
 (targets monitoring_template.ml)
 (deps monitoring_template.eml)
 (action
  (run %{bin:dream_eml} %{deps} --workspace %{workspace_root})))
