(library
 (name hilite)
 (libraries textmate-language omd yojson))

(data_only_dirs syntaxes)

(rule
 (mode promote)
 (target jsons.ml)
 (action
  (with-stdout-to
   %{target}
   (progn
    (echo "let ocaml = {|")
    (cat ./syntaxes/ocaml.json)
    (echo "|}\n\n")
    (echo "let dune = {|")
    (cat ./syntaxes/dune.json)
    (echo "|}\n\n")
    (echo "let opam = {|")
    (cat ./syntaxes/opam.json)
    (echo "|}\n\n")))))
