(library
 (name ocamlorg_web)
 (libraries
  ocamlorg_package
  ocamlorg_frontend
  dream
  dream_dashboard
  dream-accept
  dream-encoding
  omd
  ood
  timedesc
  mirage-kv-mem))

(rule
 (targets asset.ml asset.mli)
 (deps
  %{workspace_root}/asset/css/main.css
  %{workspace_root}/asset/js/playground-v1.js
  %{workspace_root}/asset/js/worker-v1.js
  %{workspace_root}/asset/js/merlin-v1.js
  (source_tree %{workspace_root}/asset))
 (action
  (with-stdout-to
   %{null}
   (run %{bin:ocaml-crunch} -m lwt %{workspace_root}/asset -o asset.ml))))

(rule
 (targets media.ml media.mli)
 (deps
  (source_tree %{workspace_root}/data/media))
 (action
  (with-stdout-to
   %{null}
   (run %{bin:ocaml-crunch} -m lwt %{workspace_root}/data/media -o media.ml))))
