(library
 (name ocamlorg_web)
 (libraries
  ocamlorg.global
  ocamlorg_package
  ocamlorg_frontend
  dream
  dream-accept
  dream-encoding
  cmarkit
  ocamlorg.data
  timedesc
  mirage-kv-mem))

(rule
 (deps (universe))
 (action
  (with-stdout-to
   commit.ml
   (progn
    (echo "let hash = \"")
    (pipe-stdout
     (run "git" "rev-parse" "HEAD")
     (run "tr" "-d" "\n"))
    (echo "\"\n")))))
