(library
 (name ood_gen)
 (libraries
  omd
  yaml
  unix
  ptime
  fmt
  cohttp
  cohttp-lwt-unix
  river
  syndic
  uri
  lambdasoup
  fpath
  hilite)
 (preprocess
  (pps ppx_deriving_yaml)))

(rule
 (targets data.ml)
 (deps
  (source_tree %{workspace_root}/data/))
 (action
  (with-stdout-to
   %{null}
   (run %{bin:ocaml-crunch} -m plain %{workspace_root}/data -o %{targets}))))
