(library
 (name ood_gen)
 (libraries
  bos
  ocamlorg.global
  ocamlorg.data_intf
  cmarkit
  ezjsonm
  yaml
  unix
  ptime
  fmt
  cohttp
  cohttp-lwt-unix
  river
  syndic
  uri
  lambdasoup
  fpath
  ppx_stable
  hilite
  re
  xmlm)
 (preprocess
  (pps ppx_deriving_yaml ppx_stable ppx_deriving.show)))
