(rule
 (targets flyout_menu_template.ml)
 (deps flyout_menu_template.eml)
 (action
  (run %{bin:dream_eml} %{deps} --workspace %{workspace_root})))

(rule
 (targets footer_template.ml)
 (deps footer_template.eml)
 (action
  (run %{bin:dream_eml} %{deps} --workspace %{workspace_root})))

(rule
 (targets header_section_template.ml)
 (deps header_section_template.eml)
 (action
  (run %{bin:dream_eml} %{deps} --workspace %{workspace_root})))

(rule
 (targets header_template.ml)
 (deps header_template.eml)
 (action
  (run %{bin:dream_eml} %{deps} --workspace %{workspace_root})))

(rule
 (targets icon_template.ml)
 (deps icon_template.eml)
 (action
  (run %{bin:dream_eml} %{deps} --workspace %{workspace_root})))

(rule
 (targets toc_template.ml)
 (deps toc_template.eml)
 (action
  (run %{bin:dream_eml} %{deps} --workspace %{workspace_root})))

(rule
 (targets package_doc_header_template.ml)
 (deps package_doc_header_template.eml)
 (action
  (run %{bin:dream_eml} %{deps} --workspace %{workspace_root})))
